Fixed texted alignment

--- a/custom.scss
+++ b/custom.scss
@@ -141,7 +141,3 @@ a{
 }
 
 // p tag text align
-
-p {
-    text-align: justify;
-  }
